Fixed nav link vertical alignment

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -72,8 +72,10 @@ body {
 
 	.header_left {
 		float: left;
+		height: 100%;
 
 		ul {
+			height: 100%;
 			font-size: 16px;
 			line-height: 75px;
 			list-style-type: none;
@@ -82,10 +84,12 @@ body {
 			overflow: hidden;
 
 			li {
+				height: 100%;
 				float: left;
+				display: flex;
+				align-items: center;
 
 				a {
-					display: block;
 					text-align: center;
 					padding: 5px 20px 5px 20px;
 				}
